[gd_scene load_steps=16 format=3 uid="uid://dy3d46uf65gpy"]

[ext_resource type="Script" path="res://scripts/system/SceneController.gd" id="1_svjoe"]
[ext_resource type="Script" path="res://scripts/system/BGMController.gd" id="2_4y32d"]
[ext_resource type="PackedScene" uid="uid://clcvgrem1uax3" path="res://scenes/Menus/Hub_Menu.tscn" id="2_76o1c"]
[ext_resource type="AudioStream" uid="uid://qrw2wo3w20c" path="res://assets/music/MainMenu.ogg" id="3_ompmu"]
[ext_resource type="AudioStream" uid="uid://delkf3ola0d4o" path="res://assets/music/InGameMusic.ogg" id="4_fvgbe"]

[sub_resource type="Animation" id="Animation_4mi1i"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxn12"]
_data = {
"Fade": SubResource("Animation_4mi1i")
}

[sub_resource type="Animation" id="Animation_r3oda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMController/Menu:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pyiu2"]
resource_name = "fade_in_menu"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMController/Menu:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(3.4822, 5),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_lw5ng"]
resource_name = "fade_out_menu"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGMController/Menu:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_im7l7"]
_data = {
"RESET": SubResource("Animation_r3oda"),
"fade_in_menu": SubResource("Animation_pyiu2"),
"fade_out_menu": SubResource("Animation_lw5ng")
}

[sub_resource type="Animation" id="Animation_d2bif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GamePlay:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oi2ll"]
resource_name = "fade_in_game"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GamePlay:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_vp1x2"]
resource_name = "fade_out_game"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GamePlay:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aa8ru"]
_data = {
"RESET": SubResource("Animation_d2bif"),
"fade_in_game": SubResource("Animation_oi2ll"),
"fade_out_game": SubResource("Animation_vp1x2")
}

[node name="MainScene" type="Node" node_paths=PackedStringArray("curr_scene")]
process_mode = 3
script = ExtResource("1_svjoe")
curr_scene = NodePath("HubMenu")
play_fade_fully = true
stay_faded = true

[node name="StayFadedTimer" type="Timer" parent="."]
one_shot = true

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fxn12")
}

[node name="Overlay" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="Overlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BGMController" type="Node" parent="."]
script = ExtResource("2_4y32d")

[node name="Menu" type="AudioStreamPlayer" parent="BGMController"]
stream = ExtResource("3_ompmu")
bus = &"Music"

[node name="GamePlay" type="AudioStreamPlayer" parent="BGMController"]
stream = ExtResource("4_fvgbe")
bus = &"Music"

[node name="MenuFade" type="AnimationPlayer" parent="BGMController"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_im7l7")
}

[node name="GameFade" type="AnimationPlayer" parent="BGMController"]
libraries = {
"": SubResource("AnimationLibrary_aa8ru")
}

[node name="HubMenu" parent="." instance=ExtResource("2_76o1c")]

[connection signal="animation_finished" from="TransitionPlayer" to="." method="_on_transition_player_animation_finished"]
